--- a/src/main/resources/sqlstatements.properties
+++ b/src/main/resources/sqlstatements.properties
@@ -1,4 +1,4 @@
 INSERT_USER = INSERT INTO user (username,password,email,name,surname,address) VALUES (?, ?, ?, ?, ?, ?);
 FIND_USER_BY_USERNAME = SELECT * FROM user WHERE username = ?;
 FIND_USER_BY_ID = SELECT * FROM user WHERE user_id = ?;
-FIND_USER_WHERE_USERNAME_AND_PASSWORD = Select * from user where username = ? and password = ?;
+FIND_USER_WHERE_USERNAME_AND_PASSWORD = SELECT * FROM user WHERE username = ? AND password = ?;
