--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,6 +9,10 @@
         <welcome-file>/WEB-INF/views/startPage.jsp</welcome-file>
     </welcome-file-list>
 
+  <session-config>
+    <session-timeout>10</session-timeout>
+  </session-config>
+
   <filter>
     <filter-name>InitialFilter</filter-name>
     <filter-class>eshop.filter.InitialFilter</filter-class>
@@ -32,7 +36,7 @@
 
   <servlet-mapping>
     <servlet-name>mainServlet</servlet-name>
-    <url-pattern>/</url-pattern>
+    <url-pattern></url-pattern>
   </servlet-mapping>
 
 </web-app>
