--- a/src/main/resources/mail.properties
+++ b/src/main/resources/mail.properties
@@ -1,4 +1,4 @@
-username=eshop@gmail.com
+username=eshop.epam@gmail.com
 mail.smtp.host=smtp.gmail.com
 password=ev.eshop.epam
 mail.smtp.socketFactory.port=465
