--- a/src/main/resources/sqlstatements.properties
+++ b/src/main/resources/sqlstatements.properties
@@ -3,5 +3,5 @@ FIND_USER_BY_USERNAME = SELECT * FROM user WHERE username = ?;
 FIND_USER_BY_ID = SELECT * FROM user WHERE id = ?;
 FIND_USER_WHERE_USERNAME_AND_PASSWORD = SELECT * FROM user WHERE username = ? AND password = ?;
 FIND_USER_BY_EMAIL= SELECT * FROM user WHERE email = ?;
-UPDATE_USER = UPDATE user SET username=?,password=?,email=?,firstname=?,lastname=?,address=?;
+UPDATE_USER = UPDATE user SET username=?,password=?,email=?,firstname=?,lastname=?,address=? WHERE id=?;
 FIND_USER_WHERE_USERNAME_AND_EMAIL = SELECT * FROM user WHERE username = ? AND email = ?;
