--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -35,4 +35,8 @@
     <url-pattern></url-pattern>
   </servlet-mapping>
 
+    <error-page>
+        <location>/WEB-INF/views/error.jsp</location>
+    </error-page>
+
 </web-app>
