--- a/src/main/resources/sqlstatements.properties
+++ b/src/main/resources/sqlstatements.properties
@@ -1,7 +1,8 @@
 INSERT_USER = INSERT INTO user (username,password,email,firstname,lastname,address) VALUES (?, ?, ?, ?, ?, ?);
+FIND_ALL_USERS= SELECT * FROM user;
 FIND_USER_BY_USERNAME = SELECT * FROM user WHERE username = ?;
 FIND_USER_BY_ID = SELECT * FROM user WHERE id = ?;
 FIND_USER_WHERE_USERNAME_AND_PASSWORD = SELECT * FROM user WHERE username = ? AND password = ?;
 FIND_USER_BY_EMAIL= SELECT * FROM user WHERE email = ?;
-UPDATE_USER = UPDATE user SET username=?,password=?,email=?,firstname=?,lastname=?,address=? WHERE id=?;
+UPDATE_USER = UPDATE user SET username=?,password=?,email=?,firstname=?,lastname=?,address=?,role=? WHERE id=?;
 FIND_USER_WHERE_USERNAME_AND_EMAIL = SELECT * FROM user WHERE username = ? AND email = ?;
