--- a/src/main/resources/sqlstatements.properties
+++ b/src/main/resources/sqlstatements.properties
@@ -6,3 +6,5 @@ FIND_USER_WHERE_USERNAME_AND_PASSWORD = SELECT * FROM user WHERE username = ? AN
 FIND_USER_BY_EMAIL= SELECT * FROM user WHERE email = ?;
 UPDATE_USER = UPDATE user SET username=?,password=?,email=?,firstname=?,lastname=?,address=?,role=? WHERE id=?;
 FIND_USER_WHERE_USERNAME_AND_EMAIL = SELECT * FROM user WHERE username = ? AND email = ?;
+
+FIND_ALL_PRODUCTS= SELECT product.id,product.name,product.price,product.amount,product.description,product.image,manufacturer.manufacturerName,manufacturer.country,category.type from product left join manufacturer on product.manufacturer_id=manufacturer.id left join category on product.category_id = category.id;
