--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,10 @@
          version="4.0">
   <display-name>Archetype Created Web Application</display-name>
 
+  <welcome-file-list>
+    <welcome-file>/starPage.jsp</welcome-file>
+  </welcome-file-list>
+
   <session-config>
     <session-timeout>10</session-timeout>
   </session-config>
