--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -24,8 +24,18 @@
 
   </filter>
 
+  <filter>
+  <filter-name>SessionFilter</filter-name>
+  <filter-class>eshop.filter.SessionFilter</filter-class>
+  </filter>
+
   <filter-mapping>
     <filter-name>InitialFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
+  <filter-mapping>
+    <filter-name>SessionFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
