--- a/src/main/resources/sqlstatements.properties
+++ b/src/main/resources/sqlstatements.properties
@@ -1,10 +1,17 @@
-INSERT_USER = INSERT INTO user (username,password,email,firstname,lastname,address) VALUES (?, ?, ?, ?, ?, ?);
-FIND_ALL_USERS= SELECT * FROM user;
-FIND_USER_BY_USERNAME = SELECT * FROM user WHERE username = ?;
-FIND_USER_BY_ID = SELECT * FROM user WHERE id = ?;
-FIND_USER_WHERE_USERNAME_AND_PASSWORD = SELECT * FROM user WHERE username = ? AND password = ?;
-FIND_USER_BY_EMAIL= SELECT * FROM user WHERE email = ?;
-UPDATE_USER = UPDATE user SET username=?,password=?,email=?,firstname=?,lastname=?,address=?,role=? WHERE id=?;
-FIND_USER_WHERE_USERNAME_AND_EMAIL = SELECT * FROM user WHERE username = ? AND email = ?;
+INSERT_USER = INSERT INTO user (username,password,email,firstname,lastname,address) VALUES (?, ?, ?, ?, ?, ?)
+FIND_ALL_USERS= SELECT * FROM user
+FIND_USER_BY_USERNAME = SELECT * FROM user WHERE username = ?
+FIND_USER_BY_ID = SELECT * FROM user WHERE id = ?
+FIND_USER_WHERE_USERNAME_AND_PASSWORD = SELECT * FROM user WHERE username = ? AND password = ?
+FIND_USER_BY_EMAIL= SELECT * FROM user WHERE email = ?
+UPDATE_USER = UPDATE user SET username=?,password=?,email=?,firstname=?,lastname=?,address=?,role=? WHERE id=?
+FIND_USER_WHERE_USERNAME_AND_EMAIL = SELECT * FROM user WHERE username = ? AND email = ?
 
-FIND_ALL_PRODUCTS= SELECT product.id,product.name,product.price,product.amount,product.description,product.image,manufacturer.manufacturerName,manufacturer.country,category.type from product left join manufacturer on product.manufacturer_id=manufacturer.id left join category on product.category_id = category.id;
+FIND_ALL_PRODUCTS= SELECT product.id,product.name,product.price,product.amount,product.description,product.image,manufacturer.manufacturer_id, manufacturer.manufacturerName,manufacturer.country,category.type_id, category.type from product left join manufacturer on product.manufacturer_id=manufacturer.manufacturer_id left join category on product.category_id = category.type_id
+WHERE_PRODUCT_ID = WHERE product.id = ?
+
+FIND_ALL_TYPES = Select * from category
+FIND_TYPE_BY_TYPE =Select * from category where category.type= ?
+
+FIND_ALL_MANUFACTURERS= SELECT * FROM manufacturer
+FIND_MANUFACTURER_BY_NAME = Select * from manufacturer where manufacturer.manufacturerName= ?
