--- a/src/main/resources/sqlstatements.properties
+++ b/src/main/resources/sqlstatements.properties
@@ -9,9 +9,11 @@ FIND_USER_WHERE_USERNAME_AND_EMAIL = SELECT * FROM user WHERE username = ? AND e
 
 FIND_ALL_PRODUCTS= SELECT product.id,product.name,product.price,product.amount,product.description,product.image,manufacturer.manufacturer_id, manufacturer.manufacturerName,manufacturer.country,category.type_id, category.type from product left join manufacturer on product.manufacturer_id=manufacturer.manufacturer_id left join category on product.category_id = category.type_id
 WHERE_PRODUCT_ID = WHERE product.id = ?
+UPDATE_PRODUCT= UPDATE product SET name=?,price=?,amount=?,description=?,image=?,manufacturer_id=?,category_id=? WHERE id=?
+ADD_PRODUCT=INSERT INTO product (name,price,amount,description,image,manufacturer_id,category_id) values(?,?,?,?,?,?,?)
 
 FIND_ALL_TYPES = Select * from category
-FIND_TYPE_BY_TYPE =Select * from category where category.type= ?
+FIND_TYPE_BY_TYPE =Select * from category where type= ?
 
 FIND_ALL_MANUFACTURERS= SELECT * FROM manufacturer
-FIND_MANUFACTURER_BY_NAME = Select * from manufacturer where manufacturer.manufacturerName= ?
+FIND_MANUFACTURER_BY_NAME = Select * from manufacturer where manufacturerName= ?
