--- a/src/main/resources/sqlstatements.properties
+++ b/src/main/resources/sqlstatements.properties
@@ -19,3 +19,7 @@ FIND_TYPE_BY_TYPE =Select * from category where type= ?
 
 FIND_ALL_MANUFACTURERS= SELECT * FROM manufacturer
 FIND_MANUFACTURER_BY_NAME = Select * from manufacturer where manufacturerName= ?
+
+ADD_ORDER=INSERT into `order` (product_id, user_id) values (?,?)
+FIND_ORDERS_BY_USER_ID=SELECT * FROM `order` where user_id=?
+COUNT_ORDERS_BY_USER_ID=SELECT count(*) AS total FROM `order` where user_id=?
