--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -69,6 +69,11 @@
     <url-pattern>/</url-pattern>
   </servlet-mapping>
 
+  <servlet-mapping>
+    <servlet-name>mainServlet</servlet-name>
+    <url-pattern>/laptop</url-pattern>
+  </servlet-mapping>
+
     <error-page>
         <location>/WEB-INF/views/error.jsp</location>
     </error-page>
